--- a/customers.html
+++ b/customers.html
@@ -9,7 +9,6 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
-    <script src="./js/menu.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -426,5 +425,6 @@
         </p>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
