--- a/pricing.html
+++ b/pricing.html
@@ -9,8 +9,6 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
-    <script src="./js/menu.js" defer></script>
-    <script src="./js/question.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -442,5 +440,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
+    <script src="./js/question.js"></script>
   </body>
 </html>
