--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
       rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
-    <script src="./js/menu.js" defer></script>
   </head>
   <body>
     <header class="header section">
@@ -463,6 +474,107 @@
             We focus on ergonomics and meeting you where you work. It's only a
             keystroke away.
           </p>
+
+          <div class="strategies-list slick">
+            <div class="strategies-card">
+              <img
+                srcset="./images/image1.jpg 1x, ./images/image1@2x.jpg 2x"
+                src="./images/image1.jpg"
+                class="strategies-image"
+                alt="document"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </div>
+            <div class="strategies-card">
+              <img
+                srcset="./images/image2.jpg 1x, ./images/image2@2x.jpg 2x"
+                src="./images/image2.jpg"
+                class="strategies-image"
+                alt="people"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title accent">
+                Motivation Is The First Step To Success
+              </h3>
+            </div>
+            <div class="strategies-card">
+              <img
+                srcset="./images/image3.jpg 1x, ./images/image2@2x.jpg 2x"
+                src="./images/image3.jpg"
+                class="strategies-image"
+                alt="city"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </div>
+            <div class="strategies-card">
+              <img
+                srcset="./images/image1.jpg 1x, ./images/image1@2x.jpg 2x"
+                src="./images/image1.jpg"
+                class="strategies-image"
+                alt="document"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </div>
+            <div class="strategies-card">
+              <img
+                srcset="./images/image2.jpg 1x, ./images/image2@2x.jpg 2x"
+                src="./images/image2.jpg"
+                class="strategies-image"
+                alt="people"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title accent">
+                Motivation Is The First Step To Success
+              </h3>
+            </div>
+            <div class="strategies-card">
+              <img
+                srcset="./images/image3.jpg 1x, ./images/image2@2x.jpg 2x"
+                src="./images/image3.jpg"
+                class="strategies-image"
+                alt="city"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </div>
+          </div>
+
+          <!--           
           <ul class="strategies-list">
             <li class="strategies-card">
               <img
@@ -512,7 +624,7 @@
                 Success Steps For Your Personal Or Business
               </h3>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
       <!-- Price -->
@@ -808,5 +920,11 @@
         </p>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/slider.js"></script>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
